RESOLVED FIXED 258087
StyleRuleCSSStyleDeclaration should use RefCounted instead of re-implementing the same thing
https://bugs.webkit.org/show_bug.cgi?id=258087
Summary StyleRuleCSSStyleDeclaration should use RefCounted instead of re-implementing...
Alex Christensen
Reported 2023-06-14 13:33:15 PDT
...
Attachments
Radar WebKit Bug Importer
Comment 1 2023-06-14 13:34:34 PDT
Alex Christensen
Comment 2 2023-06-14 13:35:24 PDT
EWS
Comment 3 2023-07-19 10:34:50 PDT
Committed 266165@main (35296e904fb2): <https://commits.webkit.org/266165@main> Reviewed commits have been landed. Closing PR #14967 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.