StyleRuleCSSStyleDeclaration should use RefCounted instead of re-implementing the same thing https://bugs.webkit.org/show_bug.cgi?id=258087 rdar://110795757

Reviewed by Chris Dumez.

Do the same thing with a few other classes.
No change in behavior.

* Source/WebCore/css/PropertySetCSSStyleDeclaration.cpp:
(WebCore::StyleRuleCSSStyleDeclaration::StyleRuleCSSStyleDeclaration):
(WebCore::StyleRuleCSSStyleDeclaration::ref): Deleted.
(WebCore::StyleRuleCSSStyleDeclaration::deref): Deleted.
* Source/WebCore/css/PropertySetCSSStyleDeclaration.h:

Canonical link: https://commits.webkit.org/266165@main